# QuadraticEquation

./: CMakeLists.txt
.github/workflows/: cmake-single-platform.yml
Main/: CMakeLists.txt
SolverLib/: CMakeLists.txt
SolverLib/include/: Solver.h
SolverLib/src/: Solver.cpp
Test/: CMakeLists.txt
Test/Src/: TestMain.cpp
